--- a/templates/home.html
+++ b/templates/home.html
@@ -13,3 +13,7 @@
     <br>
     {{ form.submit() }}
 </form>
+<form action = "{{ url_for('upload_image_file') }}" method = "POST" enctype = "multipart/form-data">
+    <input type = "file" name = "file" />
+    <input type = "submit"/>
+</form>
