--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,9 @@
 <html>
 <title>Image AI</title>
-<!-- stylesheets -->
-<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
 <div class="row">
 
   <div class="col-md-7">
-    <h1>Flowers AI - Daisy, Rose or Sunflowers ?</h1>
+    <h1>My test AI</h1>
 	<h2>Upload a flower image</h2>
     <br>
     <form action="" method=post enctype=multipart/form-data>
