--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,76 @@
+<!--Gerard Naughton G00209309 Main html file which will display my canvas, predict and clear buttons and info about my project-->
+<!DOCTYPE html>
 <html>
-<title>Image AI</title>
-<div class="row">
 
-  <div class="col-md-7">
-    <h1>My test AI</h1>
-	<h2>Upload a flower image</h2>
-    <br>
-    <form action="" method=post enctype=multipart/form-data>
-      <input type=file name=file>
-      <input type=submit value=Upload>
-    </form>
+<head>
+    <title>index</title>
 
-    <h2>Results</h2>
-    <br>
-    <table class="table" id="results-table">
-        <tr>
-          <th>Image</th>
-          <th>Prediction</th>
-        </tr>
-		<tr>
-          {% block content %}{% endblock %}
-        </tr>
-    </table>
-  </div>
+    <!--Bootstrap styling-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
 
-</div>
+    <!-- Our Own Custom Style Sheet -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <!-- Libraries needed -->
+    <!-- jQuery library -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+    <!--Bootstrap library-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+</head>
+
+<body>
+    <div classs=" ll">
+        <div class="container-fluid">
+            <div classs="row">
+                <!--Canvas and results floated to left side of page-->
+                <div class="draw-area float-left col-5">
+                    <div class="centered ">
+                        <canvas id="canvas" width="280" height="280"></canvas>
+                    </div>
+                    <h1 class="instructions">Draw on the space above</h1>
+                    <div class="centered">
+                        <input type="button" class="myButton btn btn-outline-primary" value="Predict">
+                        <input type="button" id="clearButton" class="btn btn-outline-secondary" value="Clear">
+
+                        <div class="centered">
+                            <h1 id="result"></h1>
+                        </div>
+                    </div>
+                </div>
+                <!--Profile and info on project floated to right of page-->
+                <div id="profile" class="profile col-5 float-right">
+
+                    <div class="alert alert-success" role="alert">
+                        <h4 class="alert-heading">Number Recognition using Tensor Flow</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="main-title">
+                <h1>Number Recognition</h1>
+            </div>
+        </div>
+
+        <!--Ajax call Adapted from https://github.com/sleepokay/mnist-flask-app-->
+        <script src="{{url_for('static',filename='jquery-3.2.0.min.js')}}"></script>
+	    <script src="{{url_for('static',filename='index.js')}}"></script>
+	    <script type="text/javascript">   
+	   		$(".myButton").click(function(){
+	   			$('#result').text('  Predicting...');
+	   			var $SCRIPT_ROOT = {{request.script_root|tojson|safe}};
+	   			var canvasObj = document.getElementById("canvas");
+	   			var img = canvasObj.toDataURL('image/png');
+	   			$.ajax({
+	   				type: "POST",
+	   				url: $SCRIPT_ROOT + "/predict/",
+	   				data: img,
+	   				success: function(data){
+	   					$('#result').text('Predicted Output: ' + data);
+	   				}
+	   			});
+	   		});
+	   </script>
+
+</body>
 
 </html>
