--- a/templates/show.html
+++ b/templates/show.html
@@ -4,8 +4,10 @@
 <div class="container">
     <h1>Predicted Class: {{ result.output }}</h1>
     <hr>
-    <div><img src="{{ result.path_to_image }}" class="img-rounded" width="{{ result.size }}" height="auto"></div>
+    <div>
+        <img src="{{ result.path_to_image }}" class="img-rounded" width="{{ result.size }}" height="auto" alt="start">
+    </div>
     <hr>
-    <a href = "{{ url_for('upload_file') }}" class="btn btn-default">Go Back</a>
+    <a href = "{{ url_for('load_image') }}" class="btn btn-default">Go Back</a>
 </div>
 {% endblock %}
