--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,9 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Image Classifier Web App{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('_static', filename= 'css/style.css') }}">
+    <title>FlaskBlog</title>
+</head>
 
 {% block content %}
 {% endblock %}
