--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ url_for('_static', filename= 'css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
     <title>FlaskBlog</title>
 </head>
 
